--- a/dotfiles/config/neofetch/config.conf
+++ b/dotfiles/config/neofetch/config.conf
@@ -11,8 +11,8 @@ print_info() {
     info "Packages" packages
     # info "Shell" shell
     # info "Resolution" resolution
-    info "DE" de
-    # info "WM" wm
+    #info "DE" de
+    info "WM" wm
     # info "WM Theme" wm_theme
     # info "Theme" theme
     # info "Icons" icons
