--- a/dotfiles/config/sway/config
+++ b/dotfiles/config/sway/config
@@ -267,9 +267,9 @@ set $time `date +%Y-%m-%d-%H-%M-%S`
 set $dir "Pictures/Screenshots"
 set $file "Screenshot_${time}_grim.png"
 # Capture copy and save all screens to screenshot
-bindsym Print exec grim "$dir/$file" | wl-copy < "$dir/$file" | sleep 0.5 && viewnior "$dir/$file"
+bindsym Print exec grim "$dir/$file" - | grim - | wl-copy | sleep 0.5 && viewnior "$dir/$file"
 # Capture copy and save spesific widows to screenshot
-bindsym $mod+Print exec grim -t png -g "$(slurp)" "$dir/$file" - | wl-copy < "$dir/$file" | sleep 0.5 && viewnior "$dir/$file"
+bindsym $mod+Print exec grim -t png -g "$(slurp)" "$dir/$file" | grim -t png -g "$(slurp)" - | wl-copy | sleep 0.5
 
 ##-- Workspace Rules ------------------------
 #assign [class="Lxappearance|Nitrogen"] 7
